--- a/views/bronze.html
+++ b/views/bronze.html
@@ -30,31 +30,33 @@ html, body {
 </head>
   <body>
   <div>
-    <nav class="grey">
+    <nav class="yellow darken-4">
     <div class="nav-wrapper">
-      <a href="#" class="brand-logo">Silver Medals</a>
+      <a href="#" class="brand-logo">Bronze Medals</a>
       <a href="#" data-activates="mobile-demo" class="button-collapse"><i class="material-icons">menu</i></a>
       <ul id="nav-mobile" class="right hide-on-med-and-down">
         <li><a href="gold.html">Gold</a></li>
-        <li><a href="#">Silver</a></li>
-        <li><a href="bronze.html">Bronze</a></li>
+        <li><a href="silver.html">Silver</a></li>
+        <li><a href="#">Bronze</a></li>
       </ul>
     </div>
 
   </nav>
+
+
 </div>
 
 <ul class="side-nav" id="mobile-demo">
 
     <li><a href="gold.html">Gold</a></li>
-        <li><a href="#">Silver</a></li>
-        <li><a href="bronze.html">Bronze</a></li>
+        <li><a href="silver.html">Silver</a></li>
+        <li><a href="#">Bronze</a></li>
       </ul>
       <br><br>
 
       <div class="container">
-        <!-- Silver goole map goes here -->
-        <div id="silverMap">
+        <!-- bronze goolge map goes here -->
+        <div id="bronzeMap">
         </div>
       </div>
 
@@ -72,15 +74,14 @@ html, body {
  <script>
    $(document).ready(function(){
     $(".button-collapse").sideNav({closeOnClick: true});
-  
    
   });
  </script>
 
-  <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyC8moShpHaj8B7H9sTLMcayMf8J4RzzSE4&callback=initMap"
+ <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyC8moShpHaj8B7H9sTLMcayMf8J4RzzSE4&callback=initMap"
   async defer></script>
 
-<script src="assets/javascript/silver.js"> </script>
+<script src="../public/assets/javascript/bronze.js"> </script>
 
 </body>
 </html>
