--- a/views/index.html
+++ b/views/index.html
@@ -109,7 +109,7 @@
 <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyC8moShpHaj8B7H9sTLMcayMf8J4RzzSE4&callback=initMap"
   async defer></script>
 
-<script src="assets/javascript/api.js"> </script>
+<script src="../public/assets/javascript/api.js"> </script>
 
 
 </body>
