--- a/views/bronze.html
+++ b/views/bronze.html
@@ -46,6 +46,8 @@ html, body {
 
 </div>
 
+ 
+
 <ul class="side-nav" id="mobile-demo">
 
     <li><a href="gold.html">Gold</a></li>
@@ -59,6 +61,21 @@ html, body {
         <div id="bronzeMap">
         </div>
       </div>
+
+      <!-- Modal Trigger -->
+  <a class="waves-effect waves-light btn modal-trigger" href="#modal1">Modal</a><!--This trigger must be linked to country pins -->
+
+  <!-- Modal Structure -->
+  <div id="modal1" class="modal bottom-sheet">
+    <div class="modal-content">
+      <h4 class="country">USA</h4>
+      <p>Bronze Medals: <span class="medalcount">3</span></p>
+      <p class="events">Bobsled, Ice Hockey, Speed-skating</p>
+    </div>
+    <div class="modal-footer">
+      <a href="#!" class="modal-action modal-close waves-effect waves-green btn-flat">Agree</a>
+    </div>
+  </div>
 
 
 
@@ -74,6 +91,7 @@ html, body {
  <script>
    $(document).ready(function(){
     $(".button-collapse").sideNav({closeOnClick: true});
+    $('#modal1').modal();
    
   });
  </script>
