--- a/views/gold.html
+++ b/views/gold.html
@@ -57,8 +57,20 @@ html, body {
   </div>
 </div>
 
+<!-- Modal Trigger -->
+  <a class="waves-effect waves-light btn modal-trigger" href="#modal1">Modal</a> <!--This trigger must be linked to country pins -->
 
-
+  <!-- Modal Structure -->
+  <div id="modal1" class="modal bottom-sheet">
+    <div class="modal-content">
+      <h4 class="country">USA</h4>
+      <p>Silver Medals: <span class="medalcount">3</span></p>
+      <p class="events">Bobsled, Ice Hockey, Speed-skating</p>
+    </div>
+    <div class="modal-footer">
+      <a href="#!" class="modal-action modal-close waves-effect waves-green btn-flat">Agree</a>
+    </div>
+  </div>
 
 
 
@@ -70,6 +82,7 @@ html, body {
  <script>
    $(document).ready(function(){
   	$(".button-collapse").sideNav({closeOnClick: true});
+    $('#modal1').modal();
    
   });
  </script>
