song on landing page

--- a/views/index.html
+++ b/views/index.html
@@ -13,11 +13,14 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <style>
   h3 {
-    text-shadow: 1px 1px black;
+    text-shadow: 2px 2px black;
   }
 
 </style>
 <body>
+     <audio autoplay>
+  <source src="../public/assets/images/song.mp3" type="audio/mpeg">
+</audio>
  <div class="slider fullscreen">
     <ul class="slides">
       <li>
