--- a/views/comments.html
+++ b/views/comments.html
@@ -49,6 +49,12 @@
       </div>
     </form>
   </div>
+
+  <div class="row">
+      <button class="btn waves-effect waves-light" type="submit" name="action">Submit
+    <i class="material-icons right">send</i>
+  </button>
+</div>
         
 
 
