--- a/views/comments.html
+++ b/views/comments.html
@@ -55,6 +55,11 @@
     <i class="material-icons right">send</i>
   </button>
 </div>
+
+<div class="row">
+  <h2>Previous comments</h2>
+  <span id="comments"><!--Dynamically generate comments in database here --></span>
+</div>
         
 
 
