modal opens on map click

--- a/views/gold.html
+++ b/views/gold.html
@@ -60,7 +60,7 @@ html, body {
 </div>
 
 <!-- Modal Trigger -->
-  <a class="waves-effect waves-light btn modal-trigger" href="#modal1">Modal</a> <!--This trigger must be linked to country pins -->
+ <!-- <a class="waves-effect waves-light btn modal-trigger" href="#modal1">Modal</a> <!This trigger must be linked to country pins -->
 
   <!-- Modal Structure -->
   <div id="modal1" class="modal bottom-sheet">
@@ -88,6 +88,14 @@ html, body {
    
   });
  </script>
+  <script>
+$("#goldMap").on('click', function(event) { 
+
+
+      $('#modal1').modal('open');
+
+ });
+</script>
 
 <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyC8moShpHaj8B7H9sTLMcayMf8J4RzzSE4&callback=initMap"
   async defer></script>
