--- a/views/gold.html
+++ b/views/gold.html
@@ -66,7 +66,7 @@ html, body {
   <div id="modal1" class="modal bottom-sheet">
     <div class="modal-content">
       <h4 class="country">USA</h4>
-      <p>Silver Medals: <span class="medalcount">3</span></p>
+      <p>Gold Medals: <span class="medalcount">3</span></p>
       <p class="events">Bobsled, Ice Hockey, Speed-skating</p>
     </div>
     <div class="modal-footer">
