routing for node

--- a/views/bronze.html
+++ b/views/bronze.html
@@ -35,11 +35,11 @@ html, body {
       <a href="#" class="brand-logo">Bronze Medals</a>
       <a href="#" data-activates="mobile-demo" class="button-collapse"><i class="material-icons">menu</i></a>
       <ul id="nav-mobile" class="right hide-on-med-and-down">
-        <li><a href="index.html"><i class="material-icons">home</i></a>
-        <li><a href="gold.html">Gold</a></li>
-        <li><a href="silver.html">Silver</a></li>
+        <li><a href="/"><i class="material-icons">home</i></a>
+        <li><a href="/gold">Gold</a></li>
+        <li><a href="/silver">Silver</a></li>
         <li><a href="#">Bronze</a></li>
-        <li><a href="comments.html">Comments</a></li>
+        <li><a href="/comments">Comments</a></li>
       </ul>
     </div>
 
@@ -51,9 +51,9 @@ html, body {
  
 
 <ul class="side-nav" id="mobile-demo">
-
-    <li><a href="gold.html">Gold</a></li>
-        <li><a href="silver.html">Silver</a></li>
+    <li><a href="/"><i class="material-icons">home</i></a>
+    <li><a href="/gold">Gold</a></li>
+        <li><a href="/silver">Silver</a></li>
         <li><a href="#">Bronze</a></li>
       </ul>
       <br><br>
