--- a/views/comments.html
+++ b/views/comments.html
@@ -18,10 +18,10 @@
       <a href="#" class="brand-logo">Comments</a>
       <a href="#" data-activates="mobile-demo" class="button-collapse"><i class="material-icons">menu</i></a>
       <ul id="nav-mobile" class="right hide-on-med-and-down">
-        <li><a href="index.html"><i class="material-icons">home</i></a>
-        <li><a href="gold.html">Gold</a></li>
-        <li><a href="silver.html">Silver</a></li>
-        <li><a href="bronze.html">Bronze</a></li>
+        <li><a href="/"><i class="material-icons">home</i></a>
+        <li><a href="/gold">Gold</a></li>
+        <li><a href="/silver">Silver</a></li>
+        <li><a href="/bronze">Bronze</a></li>
         <li><a href="#">Comments</a></li>
 
       </ul>
@@ -30,10 +30,10 @@
 </div>
 
   <ul class="side-nav" id="mobile-demo">
-
-    <li><a href="gold.html">Gold</a></li>
-        <li><a href="silver.html">Silver</a></li>
-        <li><a href="bronze.html">Bronze</a></li>
+    <li><a href="/"><i class="material-icons">home</i></a>
+    <li><a href="/gold">Gold</a></li>
+        <li><a href="/silver">Silver</a></li>
+        <li><a href="/bronze">Bronze</a></li>
         <li><a href="#">Comments</a></li>
       </ul>
       <br><br>
