--- a/views/index.html
+++ b/views/index.html
@@ -57,9 +57,9 @@
       <i class="large material-icons">search</i>
     </a>
     <ul>
-      <li><a class="btn-floating yellow accent-2" href="gold.html"><i class="material-icons">ac_unit</i></a></li>
-      <li><a class="btn-floating grey" href="silver.html"><i class="material-icons">ac_unit</i></a></li>
-      <li><a class="btn-floating orange" href="bronze.html"><i class="material-icons">ac_unit</i></a></li>
+      <li><a class="btn-floating yellow accent-2" href="/gold"><i class="material-icons">ac_unit</i></a></li>
+      <li><a class="btn-floating grey" href="/silver"><i class="material-icons">ac_unit</i></a></li>
+      <li><a class="btn-floating orange" href="/bronze"><i class="material-icons">ac_unit</i></a></li>
       
     </ul>
   </div>
