--- a/views/gold.html
+++ b/views/gold.html
@@ -35,21 +35,21 @@ html, body {
       <a href="#" class="brand-logo">Gold Medals</a>
       <a href="#" data-activates="mobile-demo" class="button-collapse"><i class="material-icons">menu</i></a>
       <ul id="nav-mobile" class="right hide-on-med-and-down">
-        <li><a href="index.html"><i class="material-icons">home</i></a>
+        <li><a href="/"><i class="material-icons">home</i></a>
         <li><a href="#">Gold</a></li>
-        <li><a href="silver.html">Silver</a></li>
-        <li><a href="bronze.html">Bronze</a></li>
-        <li><a href="comments.html">Comments</a></li>
+        <li><a href="/silver">Silver</a></li>
+        <li><a href="/bronze">Bronze</a></li>
+        <li><a href="/comments">Comments</a></li>
       </ul>
     	</div>
 	</nav>
 </div>
 
 	<ul class="side-nav" id="mobile-demo">
-
+    <li><a href="/"><i class="material-icons">home</i></a>
 		<li><a href="#">Gold</a></li>
-        <li><a href="silver.html">Silver</a></li>
-        <li><a href="bronze.html">Bronze</a></li>
+        <li><a href="/silver">Silver</a></li>
+        <li><a href="/bronze">Bronze</a></li>
       </ul>
       <br><br>
 
