add listeners to markers

--- a/views/silver.html
+++ b/views/silver.html
@@ -95,14 +95,14 @@ html, body {
    
   });
  </script>
-  <script>
+<!--   <script>
 $("#silverMap").on('click', function(event) { 
 
 
       $('#modal1').modal('open');
 
  });
-</script>
+</script> -->
 
   <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyC8moShpHaj8B7H9sTLMcayMf8J4RzzSE4&callback=initMap"
   async defer></script>
