--- a/views/bronze.html
+++ b/views/bronze.html
@@ -97,14 +97,14 @@ html, body {
    
   });
  </script>
- <script>
+<!--  <script>
 $("#bronzeMap").on('click', function(event) { 
 
 
       $('#modal1').modal('open');
 
  });
-</script>
+</script> -->
 
  <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyC8moShpHaj8B7H9sTLMcayMf8J4RzzSE4&callback=initMap"
   async defer></script>
