--- a/views/gold.html
+++ b/views/gold.html
@@ -88,14 +88,15 @@ html, body {
    
   });
  </script>
-  <script>
-$("#goldMap").on('click', function(event) { 
+<!--   <script>
+    marker.addListner('click', function(event) { 
 
 
       $('#modal1').modal('open');
+ }
 
- });
-</script>
+ );
+</script> -->
 
 <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyC8moShpHaj8B7H9sTLMcayMf8J4RzzSE4&callback=initMap"
   async defer></script>
