working on comments still

--- a/views/html/comments.html
+++ b/views/html/comments.html
@@ -79,7 +79,7 @@
         Message: comment
       };
 
-        $.ajax("/comments", {
+        $.ajax("/api/comments", {
             type: "POST",
             data: add
         }).then(function() {
