--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -5,9 +5,9 @@
       <a href="#" data-activates="mobile-demo" class="button-collapse"><i class="material-icons">menu</i></a>
       <ul id="nav-mobile" class="right hide-on-med-and-down">
         <li><a href="/"><i class="material-icons">home</i></a>
-        <li><a href="/html/gold">Gold</a></li>
-        <li><a href="/html/silver">Silver</a></li>
-        <li><a href="/html/bronze">Bronze</a></li>
+        <li><a href="gold">Gold</a></li>
+        <li><a href="silver">Silver</a></li>
+        <li><a href="bronze">Bronze</a></li>
         <li><a href="#">Comments</a></li>
       </ul>
       </div>
@@ -16,9 +16,9 @@
 
   <ul class="side-nav" id="mobile-demo">
     <li><a href="/"><i class="material-icons">home</i></a>
-    <li><a href="/html/gold">Gold</a></li>
-    <li><a href="/html/silver">Silver</a></li>
-    <li><a href="/html/bronze">Bronze</a></li>
+    <li><a href="gold">Gold</a></li>
+    <li><a href="silver">Silver</a></li>
+    <li><a href="bronze">Bronze</a></li>
     <li><a href="#">Comments</a></li>
   </ul>
   <br><br>
