Comments fully functional. Added containers to multiple html portions

--- a/views/html/gold.html
+++ b/views/html/gold.html
@@ -28,22 +28,23 @@ html, body {
 </style>
 
 </head>
-  <body>
+<body>
   <div>
     <nav class="yellow accent-2">
-    <div class="nav-wrapper">
-      <a href="#" class="brand-logo">Gold Medals</a>
-      <a href="#" data-activates="mobile-demo" class="button-collapse"><i class="material-icons">menu</i></a>
-      <ul id="nav-mobile" class="right hide-on-med-and-down">
-        <li><a href="/"><i class="material-icons">home</i></a>
-        <li><a href="#">Gold</a></li>
-        <li><a href="/silver">Silver</a></li>
-        <li><a href="/bronze">Bronze</a></li>
-        <li><a href="/comments">Comments</a></li>
-      </ul>
-    	</div>
-	</nav>
-</div>
+      <div class="nav-wrapper">
+        <div class="container">
+          <a href="#" class="brand-logo">Gold Medals</a>
+          <a href="#" data-activates="mobile-demo" class="button-collapse"><i class="material-icons">menu</i></a>
+          <ul id="nav-mobile" class="right hide-on-med-and-down">
+            <li><a href="/"><i class="material-icons">home</i></a></li>
+            <li><a href="#">Gold</a></li>
+            <li><a href="/silver">Silver</a></li>
+            <li><a href="/bronze">Bronze</a></li>
+            <li><a href="/comments">Comments</a></li>
+          </ul>
+      	</div>
+  	</nav>
+  </div>
 
 	<ul class="side-nav" id="mobile-demo">
     <li><a href="/"><i class="material-icons">home</i></a>
