--- a/views/html/bronze.html
+++ b/views/html/bronze.html
@@ -32,15 +32,17 @@ html, body {
   <div>
     <nav class="yellow darken-4">
     <div class="nav-wrapper">
-      <a href="#" class="brand-logo">Bronze Medals</a>
-      <a href="#" data-activates="mobile-demo" class="button-collapse"><i class="material-icons">menu</i></a>
-      <ul id="nav-mobile" class="right hide-on-med-and-down">
-        <li><a href="/"><i class="material-icons">home</i></a>
-        <li><a href="/gold">Gold</a></li>
-        <li><a href="/silver">Silver</a></li>
-        <li><a href="#">Bronze</a></li>
-        <li><a href="/comments">Comments</a></li>
-      </ul>
+      <div class="container">
+        <a href="#" class="brand-logo">Bronze Medals</a>
+        <a href="#" data-activates="mobile-demo" class="button-collapse"><i class="material-icons">menu</i></a>
+        <ul id="nav-mobile" class="right hide-on-med-and-down">
+          <li><a href="/"><i class="material-icons">home</i></a></li>
+          <li><a href="/gold">Gold</a></li>
+          <li><a href="/silver">Silver</a></li>
+          <li><a href="#">Bronze</a></li>
+          <li><a href="/comments">Comments</a></li>
+        </ul>
+      </div>
     </div>
 
   </nav>
