--- a/views/html/index.html
+++ b/views/html/index.html
@@ -18,9 +18,9 @@
 
 </style>
 <body>
-<!-- <audio autoplay>
+<audio autoplay>
   <source src="../public/assets/images/song.mp3" type="audio/mpeg">
-</audio> -->
+</audio>
  <div class="slider fullscreen">
     <ul class="slides">
       <li>
