--- a/views/html/bronze.html
+++ b/views/html/bronze.html
@@ -17,7 +17,6 @@
   position: relative;
   margin: auto;
 }
-/* Optional: Makes the sample page fill the window. */
 
 html, body {
   width: 100%;
@@ -26,11 +25,11 @@ html, body {
   padding: 0;
 }
 </style>
-
 </head>
-  <body>
-  <div>
-    <nav class="yellow darken-4">
+
+<body>
+<div>
+  <nav class="yellow darken-4">
     <div class="nav-wrapper">
       <div class="container">
         <a href="#" class="brand-logo">Bronze Medals</a>
@@ -44,81 +43,55 @@ html, body {
         </ul>
       </div>
     </div>
-
   </nav>
+</div>
+ 
+<ul class="side-nav" id="mobile-demo">
+  <li><a href="/"><i class="material-icons">home</i></a>
+  <li><a href="/gold">Gold</a></li>
+  <li><a href="/silver">Silver</a></li>
+  <li><a href="#">Bronze</a></li>
+</ul>
 
+<br><br>
 
+<div class="container">
+  <div id="bronzeMap">
+  </div>
 </div>
 
- 
-
-<ul class="side-nav" id="mobile-demo">
-    <li><a href="/"><i class="material-icons">home</i></a>
-    <li><a href="/gold">Gold</a></li>
-        <li><a href="/silver">Silver</a></li>
-        <li><a href="#">Bronze</a></li>
-      </ul>
-      <br><br>
-
-      <div class="container">
-        <!-- bronze goolge map goes here -->
-        <div id="bronzeMap">
-        </div>
-      </div>
-
-      <!-- Modal Trigger -->
-  <!--<a class="waves-effect waves-light btn modal-trigger" href="#modal1">Modal</a><!This trigger must be linked to country pins -->
-
   <!-- Modal Structure -->
-  <div id="modal1" class="modal bottom-sheet">
-    <div class="modal-content">
-      <h4 class="country"></h4>
-      <p>Bronze Medals: <span class="medalcount"></span></p>
-      <table style="width:50%; padding:0">
-        <thead>
-          <tr>
-            <th>Sport</th>
-            <th>Event</th>
-          </tr>
-        </thead>
-        <tbody class ="sport">
-        </tbody>
-      </table>
-    </div>
-    <div class="modal-footer">
-      <a href="#!" class="modal-action modal-close waves-effect waves-green btn-flat">Agree</a>
-    </div>
+<div id="modal1" class="modal bottom-sheet">
+  <div class="modal-content">
+    <h4 class="country"></h4>
+    <p>Bronze Medals: <span class="medalcount"></span></p>
+    <table style="width:50%; padding:0">
+      <thead>
+        <tr>
+          <th>Sport</th>
+          <th>Event</th>
+        </tr>
+      </thead>
+      <tbody class ="sport">
+      </tbody>
+    </table>
   </div>
+  <div class="modal-footer">
+    <a href="#!" class="modal-action modal-close waves-effect waves-green btn-flat">Agree</a>
+  </div>
+</div>
 
-
-
-
-
-
-
-
-
-
-
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.100.2/js/materialize.min.js"></script>
- <script>
-   $(document).ready(function(){
+<script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.100.2/js/materialize.min.js"></script>
+<script>
+  $(document).ready(function(){
     $(".button-collapse").sideNav({closeOnClick: true});
-    $('#modal1').modal();
-   
+    $('#modal1').modal(); 
   });
- </script>
-<!--  <script>
-$("#bronzeMap").on('click', function(event) { 
+</script>
 
-
-      $('#modal1').modal('open');
-
- });
-</script> -->
-
- <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyC8moShpHaj8B7H9sTLMcayMf8J4RzzSE4&callback=initMap"
-  async defer></script>
+<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyC8moShpHaj8B7H9sTLMcayMf8J4RzzSE4&callback=initMap"
+  async defer>
+</script>
 
 <script src="../public/assets/javascript/bronze.js"> </script>
 
