changed gold navbar background to a darker yellow and added latvia to map

--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -1,5 +1,5 @@
 <div>
-  <nav class="red lighten-1">
+  <nav class="cyan">
     <div class="nav-wrapper">
       <div class="container">
         <a href="#" class="brand-logo">Comments</a>
