--- a/views/html/bronze.html
+++ b/views/html/bronze.html
@@ -64,7 +64,7 @@ html, body {
 <div id="modal1" class="modal bottom-sheet">
   <div class="modal-content">
     <h4 class="country"></h4>
-    <p>Bronze Medals: <span class="medalcount"></span></p>
+    <p>Bronze Medals: 0<span class="medalcount"></span></p>
     <table style="width:50%; padding:0">
       <thead>
         <tr>
