comment button on landing page

--- a/views/html/index.html
+++ b/views/html/index.html
@@ -60,6 +60,7 @@
       <li><a class="btn-floating yellow accent-2" href="/gold"><i class="material-icons">ac_unit</i></a></li>
       <li><a class="btn-floating grey" href="/silver"><i class="material-icons">ac_unit</i></a></li>
       <li><a class="btn-floating orange" href="/bronze"><i class="material-icons">ac_unit</i></a></li>
+       <li><a class="btn-floating light-blue darken-4" href="/comments"><i class="material-icons">message</i></a></li>
       
     </ul>
   </div>
