Added a new image. Added links to images on index page

--- a/views/html/index.html
+++ b/views/html/index.html
@@ -33,21 +33,23 @@
       <li>
         <img src="../public/assets/images/skier.jpg"> <!-- random image -->
         <div class="caption left-align">
-          <h3 class="yellow-text accent-3">Gold</h3>
+          <!-- <a><h3 class="yellow-text accent-3">Gold</h3> -->
+          <a href="/gold" class="brand-logo"><h3 class="yellow-text accent-3">Gold</h3></a>
           
         </div>
       </li>
       <li>
         <img src="../public/assets/images/skaters.jpg"> <!-- random image -->
         <div class="caption left-align">
-          <h3 class="grey-text">Silver</h3>
-          
+          <!-- <h3 class="grey-text">Silver</h3> -->
+          <a href="/silver" class="brand-logo"><h3 class="grey-text">Silver</h3></a>
         </div>
       </li>
       <li>
         <img src="../public/assets/images/sledder.jpg"> <!-- random image -->
         <div class="caption left-align">
-          <h3 class="orange-text">Bronze</h3>
+          <!-- <h3 class="orange-text">Bronze</h3> -->
+          <a href="/bronze" class="brand-logo"><h3 class="orange-text">Bronze</h3></a>
           
         </div>
       </li>
